Change profile from SPECIAL to SUNDAY

--- a/OBS-configuration/global.ini
+++ b/OBS-configuration/global.ini
@@ -23,8 +23,8 @@ ConfirmOnExit=true
 YtDockCleanupDone=true
 
 [Basic]
-Profile=SPECIAL
-ProfileDir=SPECIAL
+Profile=SUNDAY
+ProfileDir=SUNDAY
 SceneCollection=1280 x 720 Cameras
 SceneCollectionFile=1280_x_720_Cameras
 ConfigOnNewProfile=true
